# xtype-python

./: LICENSE  README.md  pyproject.toml  setup.py  xtype.py  xtype_demo.py
lib/: xtype.py
tests/: test_xtype_advanced.py  test_xtype_arrays.py  test_xtype_basic.py  test_xtype_iterator.py  test_xtype_scalars.py  test_xtype_sequential_writing.py  xtype_demo.py
