[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xtype"
version = "0.5.0"
description = "A Python library for serializing and deserializing data structures using the xtype binary format"
readme = "README.md"
authors = [{ name = "bitagoras", email = "bitagoras@users.noreply.github.com" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Archiving",
]
requires-python = ">=3.8"
dependencies = ["numpy>=1.15.0"]

[project.urls]
Homepage = "https://github.com/bitagoras/xtype-python"
BugTracker = "https://github.com/bitagoras/xtype-python/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
python_files = ["test_*.py"]
